# charles

./: .gitignore  Makefile  README.md  charles.cabal
db/: flower_power.db
snaplets/heist/templates/: 404.tpl  _login.tpl  _perennial-list.tpl  about.tpl  admin-flower-list.tpl  admin-flower.tpl  admin-index.tpl  admin.tpl  arranged-flowers.tpl  bare-layout.tpl  base.tpl  blog-layout.tpl  carousel-layout.tpl  contact-us.tpl  flower-list.tpl  flowers.tpl  footer.tpl  gallery.tpl  header.tpl  index.tpl  login-layout.tpl  login.tpl  map-layout.tpl  new_user.tpl  u-pick.tpl
src/: Application.hs  Db.hs  Handlers.hs  Import.hs  Site.hs  Types.hs
src/Handlers/: Admin.hs
static/: bootstrap-tables.css  normalize.css  screen.css
static/css/: bootstrap-theme.css  bootstrap-theme.min.css  bootstrap.css  bootstrap.min.css  screen.css  slick-theme.css
static/js/: bootstrap.js  bootstrap.min.js
