Name:                charles
Version:             0.1.0.0
Synopsis:            Charles the Gardener's website
Description:         Site for a you-pick flower farm
License:             MIT
Author:              Will Langstroth
Maintainer:          will@langstroth.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       1.20

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable charles
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010

  build-depends:
    base                      >= 4       && < 5,
    bytestring                >= 0.9.1   && < 0.11,
    configurator              >= 0.2     && < 0.3,
    containers                >= 0.4     && < 0.6,
    digestive-functors        >= 0.7     && < 0.8,
    digestive-functors-heist  >= 0.8     && < 0.9,
    digestive-functors-snap   >= 0.6     && < 0.7,
    heist                     >= 0.13    && < 0.14,
    lens                      >= 3.7.6   && < 4.2,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    mime-mail                 >= 0.4     && < 0.5,
    regex-posix,
    safecopy                  >= 0.8     && < 0.9,
    smtp-mail                 >= 0.1.4   && < 0.1.5,
    snap                      >= 0.13    && < 0.14,
    snap-core                 >= 0.9     && < 0.11,
    snap-server               >= 0.9     && < 0.11,
    snap-loader-static        >= 0.9     && < 0.10,
    snaplet-acid-state        >= 0.2.6,
    text                      >= 0.11    && < 1.2,
    time                      >= 1.1     && < 1.5,
    xmlhtml                   >= 0.1

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans
